<resources>
    <string name="app_name">The Witcher</string>
    <string name="loginText">Iniciar sesion</string>
    <string name="userHint">Usuario</string>
    <string name="user">Usuario</string>
    <string name="user_image">Imagen de usuario</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Contraseña</string>
    <string name="passwordHintRepeat">Repetir contraseña</string>
    <string name="singup">Registrarse</string>
    <string name="forgottenPassword">¿Contraseña olvidada?</string>
    <string name="registerText">Registrarse</string>
    <string name="registerText2">¿No tienes una cuenta?</string>
    <string name="google_button_description">Iniciar sesión con Google</string>
    <string name="facebook_button_description">Iniciar sesión con Facebook</string>
    <string name="loginError">Se ha producido un error iniciando sesión</string>
    <string name="registerError">Se ha producido un error registrando al usuario</string>
    <string name="resetPassword">Restablecer contraseña</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="passwordResetSucces">Email enviado</string>
    <string name="passwordResetFailed">Error al enviar el email</string>
    <string name="resetPasswordHint">Nueva contraseña</string>
    <string name="emptyPasswordReset">No se ha cambiado la contraseña, el campo no puede estar vacío</string>
    <string name="empty_username">El usuario no puede estar vacío</string>
    <string name="invalid_email">Correo electrónico no válido</string>
    <string name="empty_password">La contraseña no puede estar vacía</string>
    <string name="password_mismatch">Las contraseñas no coinciden</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="logOut">Cerrar sesión</string>
    <string name="sort">Ordenar</string>
    <string name="search">Buscar</string>
    <string name="list">Listar</string>
    <string name="contact">Contacto</string>
    <string name="whatsapp">Escríbenos</string>
    <string name="telephonenum">+34 636 34 84 55</string>
    <string name="email">ir@cdprojekt.com</string>
    <string name="contactlocation">Varsovia</string>
    <string name="name">Nombre</string>
    <string name="specie">Especie</string>
    <string name="threat">Amenaza</string>
    <string name="options">Opciones</string>
</resources>