<menu
        xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/options">
        <menu>

            <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home"
                    android:title="Home" />
            <item
                    android:id="@+id/nav_list"
                    android:icon="@drawable/ic_list"
                    android:title="@string/list" />
            <item
                    android:id="@+id/nav_fav"
                    android:icon="@drawable/ic_fav"
                    android:title="Fav" />

            <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logOut" />

        </menu>
    </item>

</menu>