<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/background"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragments.FragmentContacto">

    <TextView
            android:text="@string/contact"
            android:textColor="@color/white"
            android:fontFamily="@font/main_font"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewContacto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="212dp" app:layout_constraintHorizontal_bias="0.498"/>
    <ImageView
            android:src="@drawable/logo_thewitcher"
            android:id="@+id/imageViewLogo"
            android:layout_width="116dp"
            android:layout_height="86dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="92dp"
            app:layout_constraintHorizontal_bias="0.498"/>
    <ImageView
            android:src="@drawable/telephone"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imageViewTelefono"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textViewTelefono"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            android:layout_marginTop="260dp"/>
    <ImageView
            android:src="@drawable/email"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/imageViewEmail"
            app:layout_constraintEnd_toStartOf="@+id/textViewEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/imageViewTelefono"
            android:layout_marginTop="8dp"/>

    <TextView
            android:text="@string/telephonenum"
            android:textColor="@color/white"
            android:fontFamily="@font/cinzel"
            android:textSize="30dp"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:gravity="center"
            android:id="@+id/textViewTelefono"
            android:background="@drawable/edittext_style"
            app:layout_constraintTop_toBottomOf="@+id/textViewContacto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_bias="0.80"/>

    <TextView
            android:text="@string/email"
            android:textColor="@color/white"
            android:fontFamily="@font/cinzel"
            android:textSize="25dp"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:gravity="center"
            android:id="@+id/textViewEmail"
            android:background="@drawable/edittext_style"
            app:layout_constraintTop_toBottomOf="@+id/textViewTelefono"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.8"/>

    <ImageView
            android:src="@drawable/location"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageViewLocation"
            app:layout_constraintTop_toBottomOf="@+id/imageViewWhatsApp"
            app:layout_constraintEnd_toStartOf="@+id/textViewUbicacion"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
            android:text="@string/contactlocation"
            android:textColor="@color/white"
            android:fontFamily="@font/cinzel"
            android:textSize="30dp"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:gravity="center"
            android:id="@+id/textViewUbicacion"
            android:background="@drawable/edittext_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.801"
            app:layout_constraintTop_toBottomOf="@+id/textViewWhatsApp"
            android:layout_marginTop="8dp"/>


    <ImageView
            android:src="@drawable/whatsapp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imageViewWhatsApp"
            app:layout_constraintEnd_toStartOf="@+id/textViewWhatsApp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewEmail"
            android:layout_marginTop="5dp"
            app:layout_constraintVertical_bias="30"
            app:layout_constraintHorizontal_bias="0.5"/>
    <TextView
            android:text="@string/whatsapp"
            android:textColor="@color/white"
            android:fontFamily="@font/cinzel"
            android:textSize="30dp"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:gravity="center"
            android:id="@+id/textViewWhatsApp"
            android:background="@drawable/edittext_style"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.8"/>

</androidx.constraintlayout.widget.ConstraintLayout>
