<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/item_layout"
        android:background="@drawable/edittext_style"
        android:layout_margin="20dp"
>

    <TextView
            android:text="@string/specie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/specie"
            android:fontFamily="@font/cinzel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textColor="@color/white"/>
    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="246dp"
            android:id="@+id/name"
            android:fontFamily="@font/main_font"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"/>

    <TextView
            android:text="@string/threat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/threat"
            android:fontFamily="@font/cinzel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/white"
            app:layout_constraintVertical_bias="0.9"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@drawable/fav_unselected"
            android:id="@+id/fab_fav"
            android:contentDescription="Boton de favorito"
            android:focusable="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.09"
            app:layout_constraintStart_toEndOf="@+id/specie"
            app:layout_constraintHorizontal_bias="0.8"/>
    <ImageView
            android:layout_width="350px"
            android:layout_height="350px"
            app:srcCompat="@drawable/leshen"
            android:id="@+id/foto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/specie"
            app:layout_constraintVertical_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/threat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewThreat"
            android:fontFamily="@font/cinzel"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/threat"
            app:layout_constraintStart_toEndOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/foto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintVertical_bias="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>